--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>My First webpage</h1>
+<p>here i will learn web technology</p>
 
 </body>
 </html>
